# snakeGame

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CI-CD-SETUP.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  README.md  RENDER-QUICK-START.md  docker-compose.unified.yml  docker-compose.yml  health-check.sh  openapi.yaml  package-lock.json  render.yaml
.github/workflows/: ci-cd.yml
backend/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
backend/app/: database.py  db_models.py  dependencies.py  models.py
backend/app/routers/: auth.py  leaderboard.py  sessions.py
backend/tests/: test_api.py
backend/tests_integration/: __init__.py  test_integration.py
docker/: start.sh
frontend/: .dockerignore  .gitignore  Dockerfile.build  README.md  jest.config.json  jest.setup.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/components/auth/: auth-guard.tsx  login-form.tsx  signup-form.tsx
frontend/components/layout/: header.tsx
frontend/components/leaderboard/: leaderboard.tsx
frontend/components/snake-game/: game-board.tsx  snake-game.tsx  spectator-game.tsx
frontend/components/spectator/: spectator-list.tsx  spectator-view.tsx
frontend/lib/api/: config.ts  mock-api.ts  types.ts
frontend/lib/api/__tests__/: mock-api.test.ts
frontend/lib/game/: game-engine.ts
frontend/lib/game/__tests__/: game-engine.test.ts
frontend/lib/hooks/: use-auth.ts
frontend/lib/hooks/__tests__/: use-auth.test.ts
nginx/: default.conf  unified.conf
